[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sizedistmerge"
version = "0.1.0"
description = "Tools for merging aerosol size distributions across instruments."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Bo Chen" },
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "netCDF4",
  "miepython",
  "zarr",
  "joblib",
]

[project.optional-dependencies]
numba = ["numba"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sizedistmerge*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sizedistmerge = ["data/lut/**/*"]
